--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=DM+Sans:wght@500;700&display=swap" rel="stylesheet">
+   <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Mulish&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./style/style.css">
 
 </head>
@@ -70,22 +73,73 @@
                 <img src="./Img/Hero1.png" alt="firstman">
         </div>
     </section>
-    <section class="container about">
+    <section class="container subscribe">
         <div>
             <img src="./Img/Hero2.png" alt="secondman">
         </div>
         <div>
-            <h3 class="email_text">
+            <h2 class="email_text">
                 Subscription index
-            </h3>
-            <div class="container_email">
-                <div>
+            </h2>   
+             <form>
                 <input type="email" class="form_email" placeholder="Email">
-                </div>
+                <button class="button button_violet">Try</button>
+            </form>
+        </div>
+    </section>
 
-                <div>
-                    <button class="button button_violet">Try</button>
-                </div>
+    <section class="container plan">
+        <h2 class="plan_title">
+            Get the right plan for future
+        </h2>
+        <div class="plan_flex">
+            <div class="item">
+                <p class="item_text">
+                    Starter
+                </p>
+                <h3 class="item_title">
+                    Free
+                </h3>
+                <ul>
+                    <li class="item_li">1 Website</li>
+                    <li class="item_li">5 GB Hosting</li>
+                    <li class="item_li">Limited Support</li>
+                </ul>
+                <button class="button button_item">
+                    Get started
+                </button>
+            </div>
+                        <div class="item">
+                <p class="item_text">
+                    Premium
+                </p>
+                <h3 class="item_title">
+                    $29 <span>/month</span>
+                </h3>
+                <ul>
+                    <li class="item_li">10 Website</li>
+                    <li class="item_li">15 GB Hosting</li>
+                    <li class="item_li">Premium Support</li>
+                </ul>
+                <button class="button button_item">
+                    Get started
+                </button>
+            </div>
+                        <div class="item">
+                <p class="item_text">
+                    Enterprise
+                </p>
+                <h3 class="item_title">
+                    $49 <span>/month</span>
+                </h3>
+                <ul>
+                    <li class="item_li">Unlimited Website</li>
+                    <li class="item_li">50 GB Hosting</li>
+                    <li class="item_li">Premium Support</li>
+                </ul>
+                <button class="button button_item">
+                    Get started
+                </button>
             </div>
         </div>
     </section>
